add blog page; add article page;

--- a/app/arcticle.html
+++ b/app/arcticle.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Starter"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Объекты</title>
+    <title>Angro</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
     <link rel="stylesheet" href="css/libs/slick.css"/>
@@ -14,7 +14,7 @@
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
-  <body class="object-body">
+  <body class="arcticle-body">
     <!--INFO START -->
     <div class="object-info">
       <div class="object-info__icon">
@@ -97,7 +97,7 @@
     </div>
     <!--SIDEBAR END-->
     <!--HEADER START -->
-    <header class="object-header">
+    <header class="article-header">
       <div class="container">
         <div class="grid">
           <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
@@ -105,234 +105,68 @@
               <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
             </svg></a>
           <!--MOBILE LOGO END-->
-          <h2 class="title">Объекты</h2>
-          <h3 class="headline">Город местонахождения строительства</h3>
+          <h2 class="title">Статья</h2>
+          <!--h3.headline Важная информация со статьями и новостями от angro--><a class="arrow-btn arrow-btn--left" href="#">
+            <div class="arrow-btn__icon">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+              </svg>
+            </div>
+            <p class="arrow-btn__text">Объекты</p></a>
         </div>
       </div>
     </header>
     <!--HEADER END-->
     <!--CONTENT START-->
-    <section class="object-content">
+    <section class="article-content">
       <div class="container">
-        <div class="object-tabs">
-          <ul>
-            <li> <a class="object-tabs__title" href="#tab-1">Полтава</a></li>
-            <li> <a class="object-tabs__title" href="#tab-2">Миргород</a></li>
-          </ul>
-          <div id="tab-1">
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "На Сенной"</a>
-              <p class="item__info">Полтава, ул. Сенная, 19</p>
-              <p class="item__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="object-opened.html">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
+        <div class="information">
+          <p class="date">01.04.2020 г.</p>
+          <p class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</p>
+          <div class="text"><img class="float-right img" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
+            <p class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
+              <div class="price">
+                <p>Вид квартиры</p>
+                <p>Этаж </p>
+                <p>Стоимость 1 кв.м</p>
+                <p>Однокомнатная</p>
+                <p>2,7,8</p>
+                <p>11500,00 грн</p>
+                <p>Двухкомнатная</p>
+                <p>2,7,8</p>
+                <p>11500,00 грн</p>
+                <p>Однокомнатная</p>
+                <p>3-6</p>
+                <p>12000,00 грн</p>
+                <p>Двухкомнатная</p>
+                <p>3-6</p>
+                <p>12000,00 грн</p>
+                <p>Трехкомнатная</p>
+                <p>9-9+</p>
+                <p>10000,00 грн</p>
+                <p>Четырехкомнатная</p>
+                <p>9-9+</p>
+                <p>10000,00 грн</p>
               </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="tab-2">
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Остров"</a>
-              <p class="item__info">Миргород, ул. Гоголя, 77</p>
-              <p class="item__text">Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города...</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Мирного"</a>
-              <p class="item__info">Миргород, ул. Панаса Мирного, 3</p>
-              <p class="item__text">Hасположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города...</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img3.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Победа"</a>
-              <p class="item__info">Миргород, ул. Победы, 10</p>
-              <p class="item__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
+            </p>
+            <div class="text__main"> 
+              <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
+              <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
+              <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
+              <p>Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.</p>
+              <ol>
+                <li>Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.</li>
+                <li>Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени</li>
+              </ol>
+              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
+              <ul>
+                <li>Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
+                <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
+              </ul>
+              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
+              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
+              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
+              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p>
             </div>
           </div>
         </div>
