--- a/app/blog.html
+++ b/app/blog.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Starter"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Объекты</title>
+    <title>Блог</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
     <link rel="stylesheet" href="css/libs/slick.css"/>
@@ -14,7 +14,7 @@
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
-  <body class="object-body">
+  <body class="blog-body">
     <!--INFO START -->
     <div class="object-info">
       <div class="object-info__icon">
@@ -97,7 +97,7 @@
     </div>
     <!--SIDEBAR END-->
     <!--HEADER START -->
-    <header class="object-header">
+    <header class="blog-header">
       <div class="container">
         <div class="grid">
           <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
@@ -105,236 +105,149 @@
               <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
             </svg></a>
           <!--MOBILE LOGO END-->
-          <h2 class="title">Объекты</h2>
-          <h3 class="headline">Город местонахождения строительства</h3>
+          <h2 class="title">Блог</h2>
+          <h3 class="headline">Важная информация со статьями и новостями от angro</h3>
         </div>
       </div>
     </header>
     <!--HEADER END-->
     <!--CONTENT START-->
-    <section class="object-content">
-      <div class="container">
-        <div class="object-tabs">
-          <ul>
-            <li> <a class="object-tabs__title" href="#tab-1">Полтава</a></li>
-            <li> <a class="object-tabs__title" href="#tab-2">Миргород</a></li>
-          </ul>
-          <div id="tab-1">
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "На Сенной"</a>
-              <p class="item__info">Полтава, ул. Сенная, 19</p>
-              <p class="item__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="object-opened.html">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
+    <section class="blog">
+      <div class="blog-item">
+        <div class="container">
+          <div class="information">
+            <div class="date">01.04.2020 г.</div>
+            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
+            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
+            <div class="price">
+              <p>Вид квартиры</p>
+              <p>Этаж </p>
+              <p>Стоимость 1 кв.м</p>
+              <p>Однокомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Однокомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Трехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
+              <p>Четырехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
             </div>
           </div>
-          <div id="tab-2">
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Остров"</a>
-              <p class="item__info">Миргород, ул. Гоголя, 77</p>
-              <p class="item__text">Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города...</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
+          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
+          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
+              <div class="arrow-btn__icon">
+                <svg class="icon">
+                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                </svg>
               </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Мирного"</a>
-              <p class="item__info">Миргород, ул. Панаса Мирного, 3</p>
-              <p class="item__text">Hасположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города...</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img3.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item"><a class="item__headline link--active" href="#">ЖК "Победа"</a>
-              <p class="item__info">Миргород, ул. Победы, 10</p>
-              <p class="item__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="item__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Смотреть объект</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Квартиры комплекса</p></a></div>
-              <div class="item__img"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
-                <div class="item__icon-wrap">
-                  <svg class="icon">
-                    <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="item__icons">
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#stairs"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Этажей</p>
-                    <p>8</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#wall"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Год постройки</p>
-                    <p>2019</p>
-                  </div>
-                </div>
-                <div class="item__icon">
-                  <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#door"></use>
-                  </svg>
-                  <div class="icon-text">
-                    <p class="icon-text__headline">Входные двери</p>
-                    <p>Металлические с МДФ-накладками</p>
-                  </div>
-                </div>
-              </div>
+              <p class="arrow-btn__text">Подробнее</p></a></div>
+        </div>
+      </div>
+      <div class="blog-item">
+        <div class="container">
+          <div class="information">
+            <div class="date">16.10.2019 г.</div>
+            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров (ноябрь 2019)</div>
+            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 ноября 2019 года</div>
+            <div class="price">
+              <p>Вид квартиры</p>
+              <p>Этаж </p>
+              <p>Стоимость 1 кв.м</p>
+              <p>Однокомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Однокомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Трехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
+              <p>Четырехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
             </div>
           </div>
+          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
+          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
+              <div class="arrow-btn__icon">
+                <svg class="icon">
+                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                </svg>
+              </div>
+              <p class="arrow-btn__text">Подробнее</p></a></div>
+        </div>
+      </div>
+      <div class="blog-item">
+        <div class="container">
+          <div class="information">
+            <div class="date">22.12.2018 г.</div>
+            <div class="information__headline">Надежный фундамент — залог комфортной жизни</div>
+            <div class="text">Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков.</div>
+          </div>
+          <div class="photo"><img class="img" src="images/blog/dock.jpg" alt="Документ'"/></div>
+          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="#">
+              <div class="arrow-btn__icon">
+                <svg class="icon">
+                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                </svg>
+              </div>
+              <p class="arrow-btn__text">Подробнее</p></a></div>
+        </div>
+      </div>
+      <div class="blog-item">
+        <div class="container">
+          <div class="information">
+            <div class="date">03.12.2018 г.</div>
+            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров (декабрь 2018)</div>
+            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 10 декабря 2018 года</div>
+            <div class="price">
+              <p>Вид квартиры</p>
+              <p>Этаж </p>
+              <p>Стоимость 1 кв.м</p>
+              <p>Однокомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>2,7,8</p>
+              <p>11500,00 грн</p>
+              <p>Однокомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Двухкомнатная</p>
+              <p>3-6</p>
+              <p>12000,00 грн</p>
+              <p>Трехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
+              <p>Четырехкомнатная</p>
+              <p>9-9+</p>
+              <p>10000,00 грн</p>
+            </div>
+          </div>
+          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
+          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
+              <div class="arrow-btn__icon">
+                <svg class="icon">
+                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                </svg>
+              </div>
+              <p class="arrow-btn__text">Подробнее</p></a></div>
         </div>
       </div>
     </section>
