--- a/app/object/object-modal.html
+++ b/app/object/object-modal.html
@@ -1,35 +1,35 @@
 
 <div class="object-modal">
-  <div class="object-modal__content container">
-    <div class="object-modal__information">
-      <div class="object-modal__text">01.04.2020 г.</div>
-      <div class="object-modal__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
-      <div class="object-modal__text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
-      <div class="object-modal__price">
-        <p class="price__head">Вид квартиры                       </p>
-        <p class="price__head">Этаж              </p>
+  <div class="content container"> 
+    <div class="information">
+      <div class="date">01.04.2020 г.</div>
+      <div class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
+      <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
+      <div class="price">
+        <p class="price__head">Вид квартиры</p>
+        <p class="price__head">Этаж </p>
         <p class="price__head">Стоимость 1 кв.м</p>
-        <p class="price__item">Однокомнатная                     </p>
-        <p class="price__item">2,7,8                   </p>
+        <p class="price__item">Однокомнатная</p>
+        <p class="price__item">2,7,8</p>
         <p class="price__item">11500,00 грн</p>
-        <p class="price__item">Двухкомнатная                       </p>
-        <p class="price__item">2,7,8                   </p>
+        <p class="price__item">Двухкомнатная</p>
+        <p class="price__item">2,7,8</p>
         <p class="price__item">11500,00 грн</p>
-        <p class="price__item">Однокомнатная                      </p>
-        <p class="price__item">3-6                    </p>
+        <p class="price__item">Однокомнатная</p>
+        <p class="price__item">3-6</p>
         <p class="price__item">12000,00 грн</p>
-        <p class="price__item">Двухкомнатная                       </p>
-        <p class="price__item">3-6                    </p>
+        <p class="price__item">Двухкомнатная</p>
+        <p class="price__item">3-6</p>
         <p class="price__item">12000,00 грн</p>
-        <p class="price__item">Трехкомнатная                       </p>
-        <p class="price__item">9-9+                   </p>
+        <p class="price__item">Трехкомнатная</p>
+        <p class="price__item">9-9+</p>
         <p class="price__item">10000,00 грн</p>
-        <p class="price__item">Четырехкомнатная                </p>
-        <p class="price__item">9-9+                   </p>
+        <p class="price__item">Четырехкомнатная</p>
+        <p class="price__item">9-9+</p>
         <p class="price__item">10000,00 грн</p>
       </div>
     </div>
-    <div class="object-modal__photo"><img class="object-modal__img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
+    <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
     <div class="object-modal__btn"><a class="arrow-btn arrow-btn--left" href="#">
         <div class="arrow-btn__icon">
           <svg class="icon">
